[package]
name = "dungeon_planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.7.3", package = "gtk4", features = ["v4_6"] }
pango = "0.18.0"
pangocairo = "0.18.0"
serde_json = "1.0.108"

[dependencies.cairo-rs]
features = ["pdf"]